package General;

public class GlobalRessourcesManager {

    Ressources science = new Ressources(false);
    Ressources bits = new Ressources(false);
    Ressources codeData = new Ressources(false);
    Ressources cryptoMoney = new Ressources(true);

    public void globalRessourcesUpdate() {

    }

}
