package General;

public class LocalRessourcesManager {

    Ressources elecricity = new Ressources(true);
    Ressources food = new Ressources(true);
    Ressources crew = new Ressources(false);

    public void localRessourcesUpdate() {

    }

}
