@startuml

title __GENERAL's Class Diagram__\n

  namespace  {
    namespace eneral {
      class General.AnimatedThing {
          - fitHeight : int
          - fitWidth : int
          - frameFactor : long
          - height : int
          - index : int
          - lastTime : long
          - nombreFrame : int
          - width : int
          - x : double
          - y : double
          + AnimatedThing()
          + updateAnimated()
      }
    }
  }
  

  namespace  {
    namespace eneral {
      class General.Gamescene {
          - bitLabel : Label
          - bitNumber : IntegerProperty
          - bitValue : long
          - codeDataLabel : Label
          - codeDataNumber : IntegerProperty
          - codeDataValue : long
          - commonRessourcesQuarterMenuIsDisplayed : Boolean
          - constructionIsSelected : Boolean
          - constructionMenuIsDisplayed : Boolean
          - crewLabel : Label
          - crewNumber : IntegerProperty
          - crewValue : long
          - cryptomoneyLabel : Label
          - cryptomoneyNumber : IntegerProperty
          - cryptomoneyValue : long
          - electricityLabel : Label
          - electricityNumber : IntegerProperty
          - electricityValue : long
          - foodLabel : Label
          - foodNumber : IntegerProperty
          - foodValue : long
          - quarterIsSelected : Boolean
          - ressourcesLabels : Label[]
          - ressourcesName : String[]
          - ressourcesNumber : IntegerProperty[]
          - ressourcesValue : long[]
          - scienceLabel : Label
          - scienceNumber : IntegerProperty
          - scienceValue : long
          - timer : AnimationTimer
          - turn : long
          + Gamescene()
          + construct()
          + endturn()
          + render()
          + valuesUpdate()
      }
    }
  }
  

  namespace  {
    namespace eneral {
      class General.GlobalRessourcesManager {
          + globalRessourcesUpdate()
      }
    }
  }
  

  namespace  {
    namespace eneral {
      class General.LocalRessourcesManager {
          + localRessourcesUpdate()
      }
    }
  }
  

  namespace  {
    namespace eneral {
      class General.Ressources {
          - amount : int
          - canBeNegativ : boolean
          + Ressources()
          + addAmount()
          + substractAmount()
      }
    }
  }
  

  namespace  {
    namespace eneral {
      class General.StaticThing {
          # sprite : ImageView
          - height : double
          - width : double
          - x : double
          - y : double
          + StaticThing()
          + getSprite()
          + updateBackground()
      }
    }
  }
  

  General.AnimatedThing -up-|> General.StaticThing
  General.Gamescene -up-|> javafx.scene.Scene
  General.Gamescene o-- Airship.ManOWar : ManOWar1
  General.Gamescene o-- General.StaticThing : backgroundLeft
  General.Gamescene o-- General.StaticThing : backgroundRight
  General.Gamescene o-- General.StaticThing : cloudBottom1Left
  General.Gamescene o-- General.StaticThing : cloudBottom1Right
  General.Gamescene o-- General.StaticThing : cloudBottom2Left
  General.Gamescene o-- General.StaticThing : cloudBottom2Right
  General.Gamescene o-- General.StaticThing : cloudTop1Left
  General.Gamescene o-- General.StaticThing : cloudTop1Right
  General.Gamescene o-- General.StaticThing : cloudTop2Left
  General.Gamescene o-- General.StaticThing : cloudTop2Right
  General.Gamescene o-- Quarter.Quarter : constructionSelected
  General.Gamescene o-- General.StaticThing : starsFix
  General.GlobalRessourcesManager o-- General.Ressources : bits
  General.GlobalRessourcesManager o-- General.Ressources : codeData
  General.GlobalRessourcesManager o-- General.Ressources : cryptoMoney
  General.GlobalRessourcesManager o-- General.Ressources : science
  General.LocalRessourcesManager o-- General.Ressources : crew
  General.LocalRessourcesManager o-- General.Ressources : elecricity
  General.LocalRessourcesManager o-- General.Ressources : food


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
